packages/typ/tests/fixtures/diagnostics/0337_fun_explicit_poly_returns_bool_10.ml
let bad_kappa : 'a. 'a -> 'a = fun _ -> true
